# digit_FT_sensors

./: .gitignore  CMakeLists.txt  README.md
config/: config.yml
data/: 01.csv
include/robotous_ft/: RFT_IF_PACKET_REV.h  RFT_UART_SAMPLE.h
scripts/: =6.2  data_logger_methods.py  gelsight_mini_interface.py  lsl_gelsight.py  plotter.py  slip_detection.py  time_synch_fabric_gelsight.py  velocity_estimation.py  xdf_post_processing.py
src/: RFT_IF_PACKET_REV.cpp  RFT_UART_SAMPLE.cpp
src_main/: FT_sensor.cpp  LSL_FT.cpp  test.cpp  test_original.cpp
src_main/csv_data/: test1.csv  test_ft_data_file.csv
src_main/test_cpp/: my_test  my_test.cpp
uild/: CMakeCache.txt  Makefile  cmake_install.cmake
